fix text alignment of About section

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -121,5 +121,10 @@
         font-size: 0.875rem;
         line-height: 1.25rem;
         width: auto;
+        text-align: center;
+    }
+
+    .aboutTechnologies > li::before {
+        left: 20%;
     }
 }
